--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,6 +5,15 @@
     <meta http-equiv="refresh" content="0; url=my-stuff.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MQ4TD18WD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MQ4TD18WD1');
+</script>
 </head>
 <body>
     <p>Redirecting to <a href="my-stuff.html">My Stuff</a>...</p>
